--- a/templates/box-shadow.html
+++ b/templates/box-shadow.html
@@ -36,23 +36,27 @@
                         <span class="switch__text"></span>
                     </div>
                     <!-- box-shadow-horizontal -->
-                    <div>
-                        <input type="number" aria-label="box-shadow-horizontal" aria-describedby="box-shadow-horizontal-description" min="-200" max="200" placeholder="Box shadow horizontal">
+                    <div class="input-group">
+                        <label for="box-shadow-horizontal">Box shadow horizontal</label>
+                        <input type="number" aria-label="box-shadow-horizontal" aria-describedby="box-shadow-horizontal-description" min="-200" max="200">
                         <input type="range" class="custom-range w-100" id="box-shadow-horizontal" min="-200" max="200" value="0">
                     </div>
                     <!-- box-shadow-vertical -->
-                    <div>
-                        <input type="number" aria-label="box-shadow-vertical" aria-describedby="box-shadow-vertical-description" min="-200" max="200" placeholder="Box shadow vertical">
+                    <div class="input-group">
+                        <label for="box-shadow-vertical">Box shadow vertical</label>
+                        <input type="number" aria-label="box-shadow-vertical" aria-describedby="box-shadow-vertical-description" min="-200" max="200">
                         <input type="range" class="custom-range w-100" id="box-shadow-vertical" min="-200" max="200" value="0">
                     </div>
                     <!-- box-shadow-blur -->
-                    <div>
-                        <input type="number" aria-label="box-shadow-blur" aria-describedby="box-shadow-blur-description" min="0" max="200" placeholder="Blur">
+                    <div class="input-group">
+                        <label for="box-shadow-blur">Blur</label>
+                        <input type="number" aria-label="box-shadow-blur" aria-describedby="box-shadow-blur-description" min="0" max="200">
                         <input type="range" class="custom-range w-100" id="box-shadow-blur" min="0" max="200" value="0">
                     </div>
                     <!-- box-shadow-spread -->
-                    <div>
-                        <input type="number" aria-label="box-shadow-spread" aria-describedby="box-shadow-spread-description" min="-200" max="200" placeholder="Spread">
+                    <div class="input-group">
+                        <label for="box-shadow-spread">Spread</label>
+                        <input type="number" aria-label="box-shadow-spread" aria-describedby="box-shadow-spread-description" min="-200" max="200">
                         <input type="range" class="custom-range w-100" id="box-shadow-spread" min="-200" max="200" value="0">
                     </div>
                     <!-- box-shadow-color -->
