--- a/templates/css-arrow.html
+++ b/templates/css-arrow.html
@@ -60,18 +60,21 @@
                         </label>
                     </div>
                     <!-- arrow-size -->
-                    <div>
-                        <input type="number" aria-label="arrow-size" aria-describedby="arrow-size-description" min="0" max="100" placeholder="Arrow size">
+                    <div class="input-group">
+                        <label for="arrow-size">Arrow size</label>
+                        <input type="number" aria-label="arrow-size" aria-describedby="arrow-size-description" min="0" max="100">
                         <input type="range" class="custom-range w-100" id="arrow-size" min="0" max="100" value="30">
                     </div>
                     <!-- arrow-border-width -->
-                    <div>
-                        <input type="number" aria-label="arrow-border-width" aria-describedby="arrow-border-width-description" min="0" max="100" placeholder="Border width">
+                    <div class="input-group">
+                        <label for="arrow-border-width">Border width</label>
+                        <input type="number" aria-label="arrow-border-width" aria-describedby="arrow-border-width-description" min="0" max="100">
                         <input type="range" class="custom-range w-100" id="arrow-border-width" min="0" max="100" value="4">
                     </div>
                     <!-- arrow-position -->
-                    <div>
-                        <input type="number" aria-label="arrow-position" aria-describedby="arrow-position-description" min="0" max="100" placeholder="Arrow position">
+                    <div class="input-group">
+                        <label for="arrow-position">Arrow position</label>
+                        <input type="number" aria-label="arrow-position" aria-describedby="arrow-position-description" min="0" max="100">
                         <input type="range" class="custom-range w-100" id="arrow-position" min="0" max="100" value="50">
                     </div>
                     <br>
