--- a/templates/font-face.html
+++ b/templates/font-face.html
@@ -16,11 +16,20 @@
                 <!-- Settings -->
                 <div class="tools-options__settings tools-options__settings--{{ active_page }}">
                     <!-- font-name -->
-                    <input type="text" aria-label="font-name" aria-describedby="font-name" placeholder="Font name">
+                    <div class="input-group">
+                        <label for="font-name">Font name</label>
+                        <input type="text" id="font-name" aria-describedby="font-name">
+                    </div>
                     <!-- font-file -->
-                    <input type="text" aria-label="font-file" aria-describedby="font-file" placeholder="Font file name">
+                    <div class="input-group">
+                        <label for="font-file">Font file name</label>
+                        <input type="text" id="font-file" aria-describedby="font-file">
+                    </div>
                     <!-- font-path -->
-                    <input type="text" aria-label="font-path" aria-describedby="font-path" placeholder="Folder path">
+                    <div class="input-group">
+                        <label for="font-path">Font path</label>
+                        <input type="text" id="font-path" aria-describedby="font-path">
+                    </div>
                 </div>
         
                 <!-- Code result -->
