--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,6 +165,22 @@ body a {
 body a:hover {
   color: #ef4444;
 }
+body .input-group {
+  position: relative;
+}
+body .input-group label {
+  position: absolute;
+  top: 0.4375em;
+  left: 1em;
+  pointer-events: none;
+  transition: 0.4s ease-out;
+}
+body .input-group label.active {
+  position: absolute;
+  top: -1.5em;
+  left: 1em;
+  font-size: 80%;
+}
 body input[type=text],
 body input[type=number] {
   width: 100%;
@@ -1299,7 +1315,7 @@ body .content {
   grid-gap: 1.5em;
 }
 .tools-options__settings--border-radius input[type=color],
-.tools-options__settings--border-radius select {
+.tools-options__settings--border-radius .select {
   grid-column-start: 1;
   grid-column-end: 3;
 }
@@ -1329,7 +1345,7 @@ body .content {
   grid-gap: 1.5em;
 }
 .tools-options__settings--text-gradient > input,
-.tools-options__settings--text-gradient div {
+.tools-options__settings--text-gradient div:not(.select) {
   grid-column-start: 1;
   grid-column-end: 3;
 }
@@ -1371,7 +1387,7 @@ body .content {
   grid-template-columns: repeat(2, minmax(0, 1fr));
   grid-gap: 1.5em;
 }
-.tools-options__settings--font-styler #text-decoration,
+.tools-options__settings--font-styler .select,
 .tools-options__settings--font-styler input[type=text] {
   grid-column-start: 1;
   grid-column-end: 3;
