--- a/templates/font-styler.html
+++ b/templates/font-styler.html
@@ -27,102 +27,125 @@
                     <!-- Edit text -->
                     <input type="text" aria-label="text-edit" aria-describedby="text-edit-description" min="-10" max="10" placeholder="Write something...">
                     <!-- font-size -->
-                    <div>
-                        <input type="number" aria-label="font-size" aria-describedby="font-size-description" min="0" max="100" placeholder="Font size">
+                    <div class="input-group">
+                        <label for="font-size">Font size</label>
+                        <input type="number" aria-label="font-size" aria-describedby="font-size-description" min="0" max="100">
                         <input type="range" class="custom-range w-100" id="font-size" min="0" max="100" value="16">
                     </div>
                     <!-- line-height -->
-                    <div>
-                        <input type="number" aria-label="line-height" aria-describedby="line-height-description" min="0.7" max="2" step="0.1" placeholder="Line height">
+                    <div class="input-group">
+                        <label for="line-height">Line height</label>
+                        <input type="number" aria-label="line-height" aria-describedby="line-height-description" min="0.7" max="2" step="0.1">
                         <input type="range" class="custom-range w-100" id="line-height" min="0.7" max="2" step="0.1" value="1">
                     </div>
                     <!-- font-family -->
-                    <select id="font-family">
-                        <option selected>Font family</option>
-                        <optgroup label="Sans serif">
-                            <option value="1">Arial</option>
-                            <option value="2">Verdana</option>
-                            <option value="3">Helvetica</option>
-                            <option value="4">Tahoma</option>
-                            <option value="5">Trebuchet MS</option>
-                        </optgroup>
-                        <optgroup label="Serif">
-                            <option value="6">Times New Roman</option>
-                            <option value="7">Georgia</option>
-                            <option value="8">Garamond</option>
-                        </optgroup>
-                        <optgroup label="Monospace">
-                            <option value="9">Courier New</option>
-                        </optgroup>
-                        <optgroup label="Cursive">
-                            <option value="10">Brush Script MT</option>
-                        </optgroup>
-                    </select>
+                    <div class="input-group">
+                        <label for="font-family">Font family</label>
+                        <select id="font-family">
+                            <option hidden selected></option>
+                            <optgroup label="Sans serif">
+                                <option value="1">Arial</option>
+                                <option value="2">Verdana</option>
+                                <option value="3">Helvetica</option>
+                                <option value="4">Tahoma</option>
+                                <option value="5">Trebuchet MS</option>
+                            </optgroup>
+                            <optgroup label="Serif">
+                                <option value="6">Times New Roman</option>
+                                <option value="7">Georgia</option>
+                                <option value="8">Garamond</option>
+                            </optgroup>
+                            <optgroup label="Monospace">
+                                <option value="9">Courier New</option>
+                            </optgroup>
+                            <optgroup label="Cursive">
+                                <option value="10">Brush Script MT</option>
+                            </optgroup>
+                        </select>
+                    </div>
                     <!-- font-weight -->
-                    <select id="font-weight">
-                        <option selected>Font weight</option>
-                        <option value="1">Normal</option>
-                        <option value="2">Bold</option>
-                    </select>
+                    <div class="input-group">
+                        <label for="font-wight">Font weight</label>
+                        <select id="font-weight">
+                            <option hidden selected></option>
+                            <option value="1">Normal</option>
+                            <option value="2">Bold</option>
+                        </select>
+                    </div>
                     <!-- font-style -->
-                    <select id="font-style">
-                        <option selected>Font style</option>
-                        <option value="1">Normal</option>
-                        <option value="2">Italic</option>
-                    </select>
+                    <div class="input-group">
+                        <label for="font-style">Font style</label>
+                        <select id="font-style">
+                            <option hidden selected></option>
+                            <option value="1">Normal</option>
+                            <option value="2">Italic</option>
+                        </select>
+                    </div>
                     <!-- font-variant -->
-                    <select id="font-variant">
-                        <option selected>Font variant</option>
-                        <option value="1">Normal</option>
-                        <option value="2">small-caps</option>
-                    </select>
+                    <div class="input-group">
+                        <label for="font-variant">Font variant</label>
+                        <select id="font-variant">
+                            <option hidden selected></option>
+                            <option value="1">Normal</option>
+                            <option value="2">small-caps</option>
+                        </select>
+                    </div>
                     <!-- text-align -->
-                    <select id="text-align">
-                        <option selected>Text align</option>
-                        <option value="1">Center</option>
-                        <option value="2">Left</option>
-                        <option value="1">Right</option>
-                        <option value="2">Justify</option>
-                    </select>
+                    <div class="input-group">
+                        <label for="text-align">Text align</label>
+                        <select id="text-align">
+                            <option hidden selected></option>
+                            <option value="1">Center</option>
+                            <option value="2">Left</option>
+                            <option value="1">Right</option>
+                            <option value="2">Justify</option>
+                        </select>
+                    </div>
                     <!-- text-transform -->
-                    <select id="text-transform">
-                        <option selected>Text transform</option>
-                        <option value="1">Capitalize</option>
-                        <option value="3">Uppercase</option>
-                        <option value="4">Lowercase</option>
-                    </select>
+                    <div class="input-group">
+                        <label for="text-transform">Text transform</label>
+                        <select id="text-transform">
+                            <option hidden selected></option>
+                            <option value="1">Capitalize</option>
+                            <option value="3">Uppercase</option>
+                            <option value="4">Lowercase</option>
+                        </select>
+                    </div>
                     <!-- text-decoration -->
-                    <select id="text-decoration">
-                        <option selected>Text decoration</option>
-                            <optgroup label="Underline">
-                                <option value="1">Solid</option>
-                                <option value="3">Dashed</option>
-                                <option value="4">Dotted</option>
-                                <option value="5">Double</option>
-                                <option value="5">Wavy</option>
+                    <div class="input-group select">
+                        <label for="text-decoration">Text decoration</label>
+                        <select id="text-decoration">
+                            <option hidden selected></option>
+                                <optgroup label="Underline">
+                                    <option value="1">Solid</option>
+                                    <option value="3">Dashed</option>
+                                    <option value="4">Dotted</option>
+                                    <option value="5">Double</option>
+                                    <option value="5">Wavy</option>
+                                </optgroup>
+                                <optgroup label="Overline">
+                                    <option value="1">Solid</option>
+                                    <option value="3">Dashed</option>
+                                    <option value="4">Dotted</option>
+                                    <option value="5">Double</option>
+                                    <option value="5">Wavy</option>
+                                </optgroup>
+                                <optgroup label="Line-through">
+                                    <option value="1">Solid</option>
+                                    <option value="3">Dashed</option>
+                                    <option value="4">Dotted</option>
+                                    <option value="5">Double</option>
+                                    <option value="5">Wavy</option>
+                                </optgroup>
+                                <optgroup label="Overline underline">
+                                    <option value="1">Solid</option>
+                                    <option value="3">Dashed</option>
+                                    <option value="4">Dotted</option>
+                                    <option value="5">Double</option>
+                                    <option value="5">Wavy</option>
                             </optgroup>
-                            <optgroup label="Overline">
-                                <option value="1">Solid</option>
-                                <option value="3">Dashed</option>
-                                <option value="4">Dotted</option>
-                                <option value="5">Double</option>
-                                <option value="5">Wavy</option>
-                            </optgroup>
-                            <optgroup label="Line-through">
-                                <option value="1">Solid</option>
-                                <option value="3">Dashed</option>
-                                <option value="4">Dotted</option>
-                                <option value="5">Double</option>
-                                <option value="5">Wavy</option>
-                            </optgroup>
-                            <optgroup label="Overline underline">
-                                <option value="1">Solid</option>
-                                <option value="3">Dashed</option>
-                                <option value="4">Dotted</option>
-                                <option value="5">Double</option>
-                                <option value="5">Wavy</option>
-                        </optgroup>
-                    </select>
+                        </select>
+                    </div>
                     <!-- text-decoration-color -->
                     <label for="text-decoration-color" class="input-color">
                         <span class="input-color__text">Text decoration color</span>
